--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>DNI: 44623240</p>
     <h2>Resumen:</h2>
     <code>
-        Mas o menos se: html, js, css(muy basico) y php, cree unas proyectos
+        Mas o menos se: html, js, css(muy basico) y php, cree unos proyectos basicos con estas tecnologias
     </code>
 </body>
 </html>
