js y css vinculados

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto 1</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Datos</h1>
-    <p>Nombre: Pablo</p>
-    <p>Apellido: Vitasse</p>
-    <p>DNI: 44623240</p>
+    <p><span class="colorrojo">Nombre</span>: Pablo</p>
+    <p><span class="colorazul">Apellido</span>: Vitasse</p>
+    <p><span class="colorverde">DNI</span>: 44623240</p>
     <h2>Resumen:</h2>
     <code>
         Mas o menos se: html, js, css(muy basico) y php, cree unos proyectos basicos con estas tecnologias
     </code>
 </body>
 </html>
+<script src="js/fn.js"></script>
