--- a/cosas random/ej personas/index.html
+++ b/cosas random/ej personas/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP1</title>
+    <title>Trabajo 1</title>
+    <link rel="stylesheet" href="css/style.css">   
 </head>
 <body>
     
 </body>
 </html>
-<script src="js/fn.js"></script>
+<script src="js/Fn.js"></script>
