--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP1</title>
 </head>
 <body>
+    <input type="text" id="ubic" placeholder="Ubicacion">
+    <button onclick="buscUb(personajes)">Buscar</button>
+    <table id="resultados" >
+    </table>
     
 </body>
 </html>
-<script src="js/fn.js"></script>
+<script src="fn.js"></script>
