--- a/pk/index.html
+++ b/pk/index.html
@@ -13,9 +13,17 @@
     </header>
 
     <div id="botones" class="botones">
-        <button id="btnteam1">Generar Team</button>
+        <div class="btnteams">
+            <button id="btnteam1">Generar Team</button>
+            <button id="dadoteam1">Tirar dados</button>
+            <div id="dado1" class="dados"></div>
+        </div>
         <button id="btnfight">Pelear</button>
-        <button id="btnteam2">Generar Team</button>
+        <div class="btnteams">
+            <button id="btnteam2">Generar Team</button>
+            <button id="dadoteam2">Tirar dados</button>
+            <div id="dado2" class="dados"></div>
+        </div>
     </div>
     <div id="pokemons" class="pokemons">
         <div id="team1" class="team">
