--- a/pk/index.html
+++ b/pk/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,42 +8,61 @@
     <title>Pelea pokemon</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header id="header">
         <h2>Pelea pokemon</h2>
+        <img src="" alt="" srcset="">
     </header>
 
     <div id="botones" class="botones">
-        <div class="btnteams">
+        <div class="btnteam1">
             <button id="btnteam1">Generar Team</button>
             <button id="dadoteam1">Tirar dados</button>
             <div id="dado1" class="dados"></div>
         </div>
-        <button id="btnfight">Pelear</button>
-        <div class="btnteams">
+        <div class="btnteam2">
             <button id="btnteam2">Generar Team</button>
             <button id="dadoteam2">Tirar dados</button>
             <div id="dado2" class="dados"></div>
         </div>
     </div>
     <div id="pokemons" class="pokemons">
-        <div id="team1" class="team">
+        <div id="team1" class="team1">
             <table>
-                <tr><td id="pk1"></td></tr>
-                <tr><td id="pk2"></td></tr>
-                <tr><td id="pk3"></td></tr>
+                <tr>
+                    <td id="pk1" class="tarjeta">
+                        
+                    </td>
+                </tr>
+                <tr>
+                    <td id="pk2" class="tarjeta"></td>
+                </tr>
+                <tr>
+                    <td id="pk3" class="tarjeta"></td>
+                </tr>
             </table>
         </div>
-        <h1>vs</h1>
-        <div id="team2" class="team">
+        <div class="vs">
+            <h1>VS</h1>
+            <button id="btnfight">Pelear</button>
+        </div>
+        <div id="team2" class="team2">
             <table>
-                <tr><td id="pk4"></td></tr>
-                <tr><td id="pk5"></td></tr>
-                <tr><td id="pk6"></td></tr>
+                <tr>
+                    <td id="pk4" class="tarjeta"></td>
+                </tr>
+                <tr>
+                    <td id="pk5" class="tarjeta"></td>
+                </tr>
+                <tr>
+                    <td id="pk6" class="tarjeta"></td>
+                </tr>
             </table>
         </div>
     </div>
 </body>
+
 </html>
 <script src="js/fn.js"></script>
 <!--
